# KONTUR

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTION.md  Cargo.toml  PRD-coop-supervisor.md  README.md  UX-kontur.md
crates/kontur-core/: Cargo.toml
crates/kontur-core/src/: canonical.rs  hold.rs  ids.rs  lib.rs  policy.rs  sealed.rs  sign.rs  verdict.rs
crates/kontur-core/src/audit/: chain.rs  mod.rs  record.rs
crates/kontur-core/tests/: integration.rs
crates/kontur-mcp/: Cargo.toml
crates/kontur-mcp/src/: error.rs  fs_workspace.rs  gatehost.rs  git_workspace.rs  lib.rs  server.rs  workspace.rs
crates/kontur-mcp/tests/: server_mcp.rs
crates/kontur-net/: Cargo.toml
crates/kontur-net/src/: agent.rs  client.rs  codec.rs  lib.rs  protocol.rs  server.rs
crates/kontur-net/tests/: e2e.rs  real_agent.rs
crates/kontur-tui/: Cargo.toml
crates/kontur-tui/src/: app.rs  boot.rs  claude_agent.rs  compose.rs  demo.rs  diffview.rs  input.rs  keystore.rs  lib.rs  remote.rs  render.rs  theme.rs  update.rs  view.rs  viewmodel.rs
crates/kontur-tui/tests/: audit_cli.rs  render.rs
docs/: PRD-coop-supervisor.md  UX-kontur.md  index.html
docs/superpowers/plans/: 2026-07-17-kontur-mcp-enforcement-plane.md  2026-07-17-kontur-tui-console.md  2026-07-18-kontur-completion.md
docs/superpowers/specs/: 2026-07-16-kontur-core-engine-design.md  2026-07-23-dispatch-gate-audit-design.md
